templates/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edgex-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edgex-redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: edgex-redis
    spec:
      containers:
        - env:
            - name: CLIENTS_CORE_COMMAND_HOST
              value: edgex-core-command
            - name: CLIENTS_CORE_DATA_HOST
              value: edgex-core-data
            - name: CLIENTS_CORE_METADATA_HOST
              value: edgex-core-metadata
            - name: CLIENTS_SUPPORT_NOTIFICATIONS_HOST
              value: edgex-support-notifications
            - name: CLIENTS_SUPPORT_SCHEDULER_HOST
              value: edgex-support-scheduler
            - name: DATABASES_PRIMARY_HOST
              value: edgex-redis
            - name: EDGEX_SECURITY_SECRET_STORE
              value: "false"
            - name: MESSAGEQUEUE_HOST
              value: edgex-redis
            - name: REGISTRY_HOST
              value: edgex-core-consul
          image: redis:6.2.4-alpine
          name: edgex-redis
          ports:
            - containerPort: 6379
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: db-data
      restartPolicy: Always
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-data
