templates/device-virtual-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edgex-device-virtual
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edgex-device-virtual
  strategy: 
    type: Recreate
  template:
    metadata:
      labels:
        app: edgex-device-virtual
    spec:
      containers:
        - env:
            - name: CLIENTS_CORE_COMMAND_HOST
              value: edgex-core-command
            - name: CLIENTS_CORE_DATA_HOST
              value: edgex-core-data
            - name: CLIENTS_CORE_METADATA_HOST
              value: edgex-core-metadata
            - name: CLIENTS_SUPPORT_NOTIFICATIONS_HOST
              value: edgex-support-notifications
            - name: CLIENTS_SUPPORT_SCHEDULER_HOST
              value: edgex-support-scheduler
            - name: DATABASES_PRIMARY_HOST
              value: edgex-redis
            - name: EDGEX_SECURITY_SECRET_STORE
              value: "false"
            - name: MESSAGEQUEUE_HOST
              value: edgex-redis
            - name: REGISTRY_HOST
              value: edgex-core-consul
            - name: SERVICE_HOST
              value: edgex-device-virtual
          image: edgexfoundry/device-virtual-arm64:2.0.0
          name: edgex-device-virtual
          ports:
            - containerPort: 59900
              protocol: TCP
      hostname: edgex-device-virtual
      restartPolicy: Always
