templates/senml-mqtt-export-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edgex-senml-mqtt-export
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edgex-senml-mqtt-export
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: edgex-senml-mqtt-export
    spec:
      containers:
        - env:
          - name: CLIENTS_CORE_COMMAND_HOST
            value: edgex-core-command
          - name: CLIENTS_CORE_DATA_HOST
            value: edgex-core-data
          - name: CLIENTS_CORE_METADATA_HOST
            value: edgex-core-metadata
          - name: CLIENTS_SUPPORT_NOTIFICATIONS_HOST
            value: edgex-support-notifications
          - name: CLIENTS_SUPPORT_SCHEDULER_HOST
            value: edgex-support-scheduler
          - name: DATABASES_PRIMARY_HOST
            value: edgex-redis
          - name: EDGEX_SECURITY_SECRET_STORE
            value: "false"
          - name: MESSAGEQUEUE_HOST
            value: edgex-redis
          - name: REGISTRY_HOST
            value: edgex-core-consul
          - name: SERVICE_HOST
            value: edgex-device-modbus
          image: matrinos/senml-mqtt-export:latest
          name: edgex-senml-mqtt-export
          ports:
            - containerPort: 59780
              protocol: TCP
          resources: {}
      hostname: edgex-senml-mqtt-export
      restartPolicy: Always
