templates/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edgex-ui-go
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edgex-ui-go
  strategy: {}
  template:
    metadata:
      labels:
        app: edgex-ui-go
    spec:
      containers:
          - name: edgex-ui-go
            image: edgexfoundry/edgex-ui-arm64:2.0.0
            imagePullPolicy: IfNotPresent
            ports:
            - name: http
              protocol: TCP
              containerPort: 4000
      restartPolicy: Always
