templates/command-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: edgex-core-command
  name: edgex-core-command
spec:
  ports:
    - name: "59882"
      port: 59882
      targetPort: 59882
  selector:
    io.kompose.service: edgex-core-command
status:
  loadBalancer: {}
