templates/consul-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: edgex-core-consul
  name: edgex-core-consul
spec:
  ports:
    - name: "8500"
      port: 8500
      targetPort: 8500
  selector:
    io.kompose.service: edgex-core-consul
status:
  loadBalancer: {}
