templates/data-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: edgex-core-data
  name: edgex-core-data
spec:
  ports:
    - name: "5563"
      port: 5563
      targetPort: 5563
    - name: "59880"
      port: 59880
      targetPort: 59880
  selector:
    io.kompose.service: edgex-core-data
status:
  loadBalancer: {}
