templates/device-modbus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edgex-senml-mqtt-export
spec:
  selector:
    app: edgex-senml-mqtt-export
  type: ClusterIP
  ports:
    - name: edgex-senml-mqtt-export
      port: 59901
      targetPort: 59901
      protocol: TCP
