templates/device-rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: edgex-device-rest
  name: edgex-device-rest
spec:
  ports:
    - name: "59986"
      port: 59986
      targetPort: 59986
  selector:
    io.kompose.service: edgex-device-rest
status:
  loadBalancer: {}
