templates/device-virtual-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: edgex-device-virtual
  name: edgex-device-virtual
spec:
  ports:
    - name: "59900"
      port: 59900
      targetPort: 59900
  selector:
    io.kompose.service: edgex-device-virtual
status:
  loadBalancer: {}
