templates/metadata-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edgex-core-metadata
spec:
  selector:
    app: edgex-core-metadata
  ports:
    - name: "59881"
      port: 59881
      targetPort: 59881
