templates/scheduler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edgex-support-scheduler
spec:
  selector:
    app: edgex-support-scheduler
  type: ClusterIP
  ports:
    - name: support-scheduler-port
      port: 59861
      targetPort: 59861
