templates/senml-mqtt-export-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edgex-senml-mqtt-export
spec:
  selector:
    app: edgex-senml-mqtt-export
  type: ClusterIP
  ports:
    - name: edgex-senml-mqtt-export
      port: 59780
      targetPort: 59780
      protocol: TCP
