templates/system-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edgex-sys-mgmt-agent
spec:
  selector:
    app: edgex-sys-mgmt-agent
  ports:
    - name: sys-mgmt-agent-port
      port: 58890
      targetPort: 58890
