templates/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: edgex-ui-go
  name: edgex-ui-go
spec:
  type: NodePort
  selector:
    io.kompose.service: edgex-ui-go
  ports:
      - name: http
        port: 4000
        protocol: TCP
        targetPort: 4000
        nodePort: 30040

status:
  loadBalancer: {}
