templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edgex-nginx-ingress
spec:
  rules:
    - host: ""
      http:
        paths:
          - path: /edgex
            pathType: Prefix
            backend:
              serviceName: edgex-ui-go
              servicePort: 4000
